--- a/index.html
+++ b/index.html
@@ -474,5 +474,17 @@
         </div>
       </div>
     </footer>
+
+    <!--#region backdrop-->
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="close-btn" type="button">
+          <svg class="close-btn-icon" width="8" height="8">
+            <use href="./images/icons.svg#close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <!--#endregion backdrop-->
   </body>
 </html>
