--- a/index.html
+++ b/index.html
@@ -483,8 +483,83 @@
             <use href="./images/icons.svg#close"></use>
           </svg>
         </button>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="modal-container-block">
+            <label class="modal-form-label" for="user-name">Name</label>
+            <div class="modal-form-input-cont">
+              <input
+                class="modal-form-input"
+                required
+                id="user-name"
+                name="user-text"
+                type="text"
+              />
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-container-block">
+            <label class="modal-form-label" for="user-tel">Phone</label>
+            <div class="modal-form-input-cont">
+              <input
+                class="modal-form-input"
+                required
+                id="user-tel"
+                name="user-text"
+                type="text"
+              />
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-container-block">
+            <label class="modal-form-label" for="user-mail">Email</label>
+            <div class="modal-form-input-cont">
+              <input
+                class="modal-form-input"
+                required
+                id="user-mail"
+                name="user-text"
+                type="text"
+              />
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#email"></use>
+              </svg>
+            </div>
+          </div>
+          <div>
+            <label class="modal-form-label" for="user-comment">Comment</label>
+            <textarea
+              name=""
+              class="user-comment"
+              placeholder="Text input"
+              id="user-comment"
+            ></textarea>
+          </div>
+          <div class="modal-form-cont-checkbox">
+            <input
+              type="checkbox"
+              class="checkbox visually-hidden"
+              id="user-checkbox"
+            />
+            <label for="user-checkbox" class="label-checkbox">
+              <span class="custom-checkbox">
+                <svg class="" width="10" height="8">
+                  <use href="./images/icons.svg#check"></use>
+                </svg>
+              </span>
+              accept the terms and conditions of the
+              <a href="">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="modal-btn" type="button">Send</button>
+        </form>
       </div>
     </div>
+
     <!--#endregion backdrop-->
   </body>
 </html>
