--- a/index.html
+++ b/index.html
@@ -474,16 +474,17 @@
         </div>
         <div class="footer-subcribe-container">
           <p class="social-text">Subscribe</p>
-          <form>
-            <label class="footer-form" for="subscribe"></label>
-            <input
-              class="footer-form-input"
-              id="subscribe"
-              name="subscribe"
-              type="text"
-              placeholder="E-mail"
-            />
-            <button class="subscribe-btn">
+          <form class="subscribe-form">
+            <label class="footer-form" for="subscribe">
+              <input
+                class="footer-form-input"
+                id="subscribe"
+                name="subscribe"
+                type="email"
+                placeholder="E-mail"
+            /></label>
+
+            <button class="subscribe-btn" type="submit">
               Subscribe
               <svg class="subscribe-icon" width="24" height="24">
                 <use href="./images/icons.svg#Frame"></use>
@@ -495,7 +496,7 @@
     </footer>
 
     <!--#region backdrop-->
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="close-btn" type="button">
           <svg class="close-btn-icon" width="8" height="8">
