--- a/index.html
+++ b/index.html
@@ -482,7 +482,8 @@
                 name="subscribe"
                 type="email"
                 placeholder="E-mail"
-            /></label>
+              />
+            </label>
 
             <button class="subscribe-btn" type="submit">
               Subscribe
