--- a/index.html
+++ b/index.html
@@ -513,10 +513,10 @@
                 class="modal-form-input"
                 required
                 id="user-name"
-                name="user-text"
+                name="user-name"
                 type="text"
               />
-              <svg class="modal-form-icon" width="18" height="18">
+              <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#person"></use>
               </svg>
             </div>
@@ -531,7 +531,7 @@
                 name="user-text"
                 type="text"
               />
-              <svg class="modal-form-icon" width="18" height="18">
+              <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#phone"></use>
               </svg>
             </div>
@@ -546,15 +546,15 @@
                 name="user-text"
                 type="text"
               />
-              <svg class="modal-form-icon" width="18" height="18">
+              <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#email"></use>
               </svg>
             </div>
           </div>
-          <div>
+          <div class="comment-textarea">
             <label class="modal-form-label" for="user-comment">Comment</label>
             <textarea
-              name="modal-textarea"
+              name="user-comment"
               class="user-comment"
               placeholder="Text input"
               id="user-comment"
@@ -564,9 +564,9 @@
             <input
               type="checkbox"
               class="checkbox visually-hidden"
-              id="user-checkbox"
+              id="user-privacy"
             />
-            <label for="user-checkbox" class="label-checkbox">
+            <label for="user-privacy" class="label-checkbox">
               <span class="custom-checkbox">
                 <svg class="" width="10" height="8">
                   <use href="./images/icons.svg#check"></use>
