--- a/index.html
+++ b/index.html
@@ -563,8 +563,10 @@
           <div class="modal-form-cont-checkbox">
             <input
               type="checkbox"
+              value="true"
               class="checkbox visually-hidden"
               id="user-privacy"
+              name="user-privacy"
             />
             <label for="user-privacy" class="label-checkbox">
               <span class="custom-checkbox">
@@ -572,8 +574,8 @@
                   <use href="./images/icons.svg#check"></use>
                 </svg>
               </span>
-              accept the terms and conditions of the
-              <a href="">Privacy Policy</a>
+              I accept the terms and conditions of the
+              <a class="privacy" href="">Privacy Policy</a>
             </label>
           </div>
           <button class="modal-btn" type="button">Send</button>
